[gd_scene load_steps=11 format=2]

[ext_resource path="res://player.gd" type="Script" id=1]
[ext_resource path="res://icon.png" type="Texture" id=2]
[ext_resource path="res://Tileset/grassSteepSlope2.png" type="Texture" id=3]

[sub_resource type="RectangleShape2D" id=3]

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 16.9018, 16.0696 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 23.3427, 22.3265 )

[sub_resource type="RectangleShape2D" id=6]
extents = Vector2( 27.0232, 25.823 )

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 29, 29.3413 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 31, 31 )

[sub_resource type="CircleShape2D" id=7]

[node name="player" type="KinematicBody2D"]
script = ExtResource( 1 )

[node name="playerSprite" type="Sprite" parent="."]
modulate = Color( 0.109497, 0.176134, 0.71875, 1 )
texture = ExtResource( 2 )

[node name="RayCasts" type="Node2D" parent="."]
editor/display_folded = true
visible = false
position = Vector2( 0.139053, 8.13828 )

[node name="RayCast2D" type="RayCast2D" parent="RayCasts"]
light_mask = 3
position = Vector2( 7.01379, -0.0852575 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="RayCast2D1" type="RayCast2D" parent="RayCasts"]
position = Vector2( -6.77991, 0 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="RayCast2D2" type="RayCast2D" parent="RayCasts"]
light_mask = 524289
position = Vector2( 1.86265e-007, 0 )
enabled = true
cast_to = Vector2( 0, 5 )

[node name="facingPosition" type="Position2D" parent="."]
editor/display_folded = true
position = Vector2( 7, 0 )

[node name="Sprite" type="Sprite" parent="facingPosition"]
texture = ExtResource( 3 )

[node name="HandgunTimer" type="Timer" parent="."]

[node name="health1" type="CollisionShape2D" parent="."]
shape = SubResource( 3 )
disabled = true

[node name="health2" type="CollisionShape2D" parent="."]
shape = SubResource( 4 )
disabled = true

[node name="health3" type="CollisionShape2D" parent="."]
shape = SubResource( 5 )
disabled = true

[node name="health4" type="CollisionShape2D" parent="."]
shape = SubResource( 6 )
disabled = true

[node name="health5" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="hitbox" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitbox"]
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 7 )
[connection signal="timeout" from="HandgunTimer" to="." method="_on_HandgunTimer_timeout"]
